		 CHANGES IN servr VERSION 0.10

NEW FEATURES

- Added a function `browse_last()` to reopen the last browsed page.

		 CHANGES IN servr VERSION 0.9

BUG FIXES

- The web browser may be opened too early (before the server is ready) (originally reported at rstudio/rstudio#2475).

		 CHANGES IN servr VERSION 0.8

NEW FEATURES

- added another implementation of the daemoinzed server based on the later package, since the previous implmentation based on `httpuv::startDaemonizedServer()` could crash the R session on Windows

		 CHANGES IN servr VERSION 0.7

NEW FEATURES

- added a new argument `watch` to `servr::httw()`

- exported the function `server_config()`

BUG FIXES

- files/directories that contain multibyte characters in path names cannot be served correctly (thanks, Hao Peng)

		 CHANGES IN servr VERSION 0.6

NEW FEATURES

- on 404 (page not found), 404.html will be displayed if it exists under the
  root directory

- improved the support for HTTP Range requests, e.g. servr can correctly serve
  MP4 videos now in major browsers including Safari

BUG FIXES

- servr should decode requested paths before reading them (https://github.com/rstudio/blogdown/issues/85)

		 CHANGES IN servr VERSION 0.5

NEW FEATURES

- added an argument `initpath` to `server_config()` so you can open a specific
  path initially in the web browser

- the `daemon` argument of `server_config()` takes the default value from the
  global option `getOption('servr.daemon')` now, e.g., you can set
  `options(servr.daemon = TRUE)` so that the daemonized server is always used

		 CHANGES IN servr VERSION 0.4.1

NEW FEATURES

- excluded ports considered unsafe by Chrome http://superuser.com/a/188070 when
  selecting a random port automatically

BUG FIXES

- fixed a bug in 301 redirection when serving a directory without the trailing
  slash

		 CHANGES IN servr VERSION 0.4

NEW FEATURES

- you can disable websocket listening on an HTML page using a special HTML