@@ -17,7 +17,7 @@ Depends:
     R (>= 3.0.0)
 Imports:
     mime (>= 0.2),
-    httpuv (>= 1.3.2),
+    httpuv (>= 1.4.0),
     xfun,
     jsonlite
 Suggests:
