@@ -12,7 +12,6 @@
 #' @inheritParams server_config
 #' @param ... server configurations passed to \code{\link{server_config}()}
 #' @export
-#' @importFrom httpuv runServer startDaemonizedServer
 #' @references \url{https://github.com/yihui/servr}
 #' @examples #' see https://github.com/yihui/servr for command line usage
 #' # or run inside an R session
@@ -89,12 +88,6 @@ watch_dir = function(dir = '.', pattern = NULL, all_files = FALSE, handler = NUL
 #'   command line argument \code{-b} was passed to R (see
 #'   \code{\link{commandArgs}()}); N.B. the RStudio viewer is used as the web
 #'   browser if available
-#' @param daemon whether to launch a daemonized server (the server does not
-#'   block the current R session) or a blocking server; by default, it is the
-#'   global option \code{getOption('servr.daemon')} (e.g., you can set
-#'   \code{options(servr.daemon = TRUE)}); if this option was not set,
-#'   \code{daemon = TRUE} if a command line argument \code{-d} was passed to R
-#'   (through \command{Rscript}); normally it should be \code{FALSE} by default
 #' @param interval the time interval used to check if an HTML page needs to be
 #'   rebuilt (by default, it is checked every second); at the moment, the
 #'   smallest possible \code{interval} is set to be 1, and this may change in
@@ -103,20 +96,20 @@ watch_dir = function(dir = '.', pattern = NULL, all_files = FALSE, handler = NUL
 #'   \code{http://host:port/baseurl})
 #' @param initpath the initial path in the URL (e.g. you can open a specific
 #'   HTML file initially)
+#' @param ... currently ignored
 #' @inheritParams httpuv::startServer
 #' @export
 #' @return A list of configuration information of the form \code{list(host,
 #'   port, start_server = function(app) {}, ...)}.
 server_config = function(
-  dir = '.', host = '127.0.0.1', port, browser, daemon, interval = 1, baseurl = '',
-  initpath = ''
+  dir = '.', host = '127.0.0.1', port, browser, interval = 1, baseurl = '',
+  initpath = '', ...
 ) {
   cargs = commandArgs(TRUE)
   if (missing(browser)) browser = interactive() || '-b' %in% cargs || is_rstudio()
   if (missing(port))
     port = if (length(port <- grep('^-p[0-9]{4,}$', cargs, value = TRUE)) == 1)
       as.integer(sub('^-p', '', port)) else random_port()
-  if (missing(daemon)) daemon = getOption('servr.daemon', '-d' %in% cargs)
   damn_library('methods')
   url = sprintf('http://%s:%d', host, port)
   if (baseurl != '') url = paste(url, baseurl, sep = '')
@@ -131,31 +124,9 @@ server_config = function(
   list(
     host = host, port = port, interval = interval, url = url,
     start_server = function(app) {
-      # a built-in daemonized server
-      if (daemon && !requireNamespace('later', quietly = TRUE)) {
-        id = startDaemonizedServer(host, port, app)
-        browse()
-        return(daemon_hint(id))
-      }
-
-      server = startServer(host, port, app)
-      browse()
-      # a daemonized server based on later
-      if (daemon) {
-        daemon_hint(server, TRUE)
-        daemon_serve = function() {
-          if (!server %in% daemon_list()) return()
-          service()
-          later::later(daemon_serve, 0.01)
-        }
-        daemon_serve()
-      } else {
-        on.exit(stopServer(server), add = TRUE)
-        while (TRUE) {
-          service()
-          Sys.sleep(0.001)
-        }
-      }
+      id = startServer(host, port, app)
+      on.exit(browse(), add = TRUE)
+      daemon_hint(id)
     },
     browse = browse
   )
